# zero2prod

./: Cargo.toml  README.md  config.yaml  deny.toml
.github/workflows/: cargo-deny.yml  rust.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
