[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Alex Coleman <alexjcoleman@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = {version = "1", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11"

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/bin/zld"]
